env + docs
